stage0/tests/sema/veo/92_error_missing_return.veo
// expected-error@+1: not all control paths return a value
func missing(): i32 {
    let x = 5;
}
